fix: remove jdk18 gramma